--- a/build.gradle
+++ b/build.gradle
@@ -113,6 +113,10 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
+    maven {
+        url = "https://api.modrinth.com/maven"
+    }
+}
     // Put repositories for dependencies here
     // ForgeGradle automatically adds the Forge maven and Maven Central for you
 
@@ -121,7 +125,7 @@ repositories {
     // flatDir {
     //     dir 'libs'
     // }
-}
+
 
 dependencies {
     // Specify the version of Minecraft to use.
@@ -130,6 +134,8 @@ dependencies {
     // If the group id is "net.minecraft" and the artifact id is one of ["client", "server", "joined"],
     // then special handling is done to allow a setup of a vanilla dependency without the use of an external repository.
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+    implementation fg.deobf("maven.modrinth:aaa-particles:1.20.1-1.4.10-forge")
+    implementation fg.deobf("maven.modrinth:architectury-api:9.2.14+forge")
 
     // Example mod dependency with JEI - using fg.deobf() ensures the dependency is remapped to your development mappings
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
